# Shinkofa-Ecosystem

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Contributing.md  DEPLOYMENT.md  Migration-Report-V1.1.md  PORTS.md  RAPPORT-SESSION-2026-01-30.md  README.md  Rapport-Optimisation-Rag-2026-01-30.md  STATUS-2026-01-30.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: CHANGELOG.md  CLAUDE.md  Claude-Master.md  INDEX.md  Index.md  Migration-V2-V3.md  ONBOARDING.md  Onboarding.md  README.md  mcp-config.json  setup-project.ps1  setup-project.sh
.claude/.claude/: settings.local.json
.claude/agents/: AGENT-HANDOFF.md  Dependency-Auditor.md
.claude/commands/: audit.md  cdc.md  commit-update-registry.md  lint-fix.md  new-electron-app.md  rag-status.md  resume-dev.md  session-summary.md  test-coverage.md
.claude/content-strategy/: Mythologie-Shizen.md  README.md  Saga-Shizen-Episodes.md
.claude/core/: Agent-Behavior.md
.claude/hooks/: README.md  rag-first-reminder.ps1  rag-first-reminder.sh
.claude/infrastructure/: CHECKLIST-PROPAGATION.md  INFRASTRUCTURE-GUIDE.md  Knowledge-Hub.md  Local-Ai-Infra.md  O2switch-Hosting.md  PLAN-PROPAGATION-PROJETS.md  PROPAGATION-GUIDE.md  PROPAGATION-TRACKING.md  Projects-Registry.md  RAPPORT-INTEGRATION-EXOMONDO-COMPLETE.md  README.md  VPS-OVH-SETUP.md  WINDOWS-DEV-SETUP.md
.claude/quickrefs/: Commandes-Reference.md
.claude/scripts/: Rename-To-Title-Kebab-Case.ps1  rename-to-title-kebab-case.sh
.claude/templates/: CLAUDE-Coaching.md  CLAUDE-PROJECT.md  session-state.md
.claude/templates/cli-tool/: pyproject.toml
.claude/templates/cli-tool/.claude/docs/: CONTEXT.md  DATABASE_SCHEMA.md  TESTING_GUIDE.md
.claude/templates/cli-tool/.github/workflows/: test.yml
.claude/templates/cli-tool/mycli/: __init__.py  __main__.py
.claude/templates/cli-tool/mycli/commands/: db.py  deploy.py  init.py
.claude/templates/cli-tool/typescript-variant/: .env.example  README.md  vitest.config.ts
.claude/templates/cli-tool/typescript-variant/src/: index.test.ts
.claude/templates/cli-tool/typescript-variant/src/commands/: db.ts  deploy.ts
.github/: SECRETS-REQUIRED.md
.github/workflows/: ci.yml  deploy.yml
apps/api-shizen/: .env.example  CORRECTIONS-QUESTIONNAIRE.md  Dockerfile  Lecons-Erreurs.md  README.md  Test-Guide-Windows.md  alembic.ini  create_tables.py  package.json  requirements-gpu.txt  requirements.txt  test-journals-rituals.sh  test_api_persistence.py  test_db_direct.py  test_metadata.py
apps/hibiki-dictate/: .gitignore  CLAUDE.md  GUIDE-TEST-REFONTE.md  MIGRATION-QT6.md  MIGRATION-SUMMARY.md  README.md  REFONTE-MODERNE-v2.md  REFONTE-UI-CHANGES.md  STATUS-QT6.md  UI-FIXES-v2.md  hibiki_launcher.py  main_qt.py  pytest.ini  quick_test.py  requirements.txt  run.bat  start_hibiki.bat  start_hibiki_silent.vbs  test_full_app.py  test_qt_backend.py
apps/slf-esport/Prompt-2026-Optimized/templates/fastapi-react/backend/: pyproject.toml
apps/slf-esport/Prompt-2026-Optimized/templates/fastapi-react/backend/app/core/: security.py
docs/: Business-Plan-Shinkofa.md  Citations-Shinkofa.md  Compendium-Shizen.md  Ecosysteme-Projets-Shinkofa.md  Glossaire-Shinkofa.md  Guide-Workflow-Quotidien.md  Liste-Projets-Shinkofa-2026.md  Masterplan-Shinkofa.md  OPTIMISATION-RAG-KNOWLEDGEBASE.md  SHINKOFA-VISION-COMPLETE.md  SYSTEME-KOSHIN-IA.md  Systeme-Coaching-Shinkofa.md
scripts/: rag_chromadb_pipeline.py
(+1433 files in other folders)
